fixed some margin alignment

--- a/css/index.css
+++ b/css/index.css
@@ -249,10 +249,6 @@ body {
     border-bottom: 2px solid black;
   }
 
-  .contact {
-    margin: 20px;
-  }
-
   .contact address h2 {
     font-size: 20px;
     font-weight: bold;
@@ -260,10 +256,6 @@ body {
   }
   .contact address p {
     margin: 5px 0;
-  }
-  .copyright {
-    text-align: center;
-    margin: 15px 0;
   }
 }
 
@@ -316,51 +308,6 @@ body {
   }
   .right {
     display: none;
-  }
-  .upper-middle{
-    display: flex;
-    border-top: 1px solid black;
-    margin: 20px;
-  }
-  .upper-middle h2 {
-    font-weight: bold;
-    font-size: 20px;
-    margin: 20px 0;
-  }
-  .middle-img {
-    background: url("../img/mid-page-accent.jpg") no-repeat center;
-    background-size: cover; 
-    height: 100px;
-    margin: 20px;
-  }
-  .lower-middle {
-    display: flex;
-    border-bottom: 2px solid black;
-    margin: 20px;
-  }
-  .lower-middle div {
-    margin: 20px 0;
-  }
-  .lower-middle h2 {
-    font-weight: bold;
-    font-size: 20px;
-    margin: 20px 0;
-  }
-  .contact {
-    margin: 20px;
-  }
-
-  .contact address h2 {
-    font-size: 20px;
-    font-weight: bold;
-    margin: 20px 0;
-  }
-  .contact address p {
-    margin: 5px 0;
-  }
-  .copyright {
-    text-align: center;
-    margin: 15px 0;
   }
 }
 
@@ -417,7 +364,7 @@ header {
 .upper-middle{
   display: flex;
   border-top: 1px solid black;
-  margin: 20px;
+  margin: 20px 10px;
 }
 .upper-middle h2 {
   font-weight: bold;
@@ -428,15 +375,15 @@ header {
   background: url("../img/mid-page-accent.jpg") no-repeat center;
   background-size: cover; 
   height: 100px;
-  margin: 20px;
+  margin: 20px 10px;
 }
 .lower-middle {
   display: flex;
   border-bottom: 2px solid black;
-  margin: 20px;
+  margin: 20px 10px;
 }
 .lower-middle div {
-  margin: 20px 0;
+  margin: 20px 10px;
 }
 .lower-middle h2 {
   font-weight: bold;
